# cpputils

./: CMakeLists.txt  README.md
cmake/: options.cmake
include/cpputils/container/: handle_manager.h  nullable.h  smart_ptr.h  wrapper.h
include/cpputils/logging/: consumer.h  logger.h  matcher.h  rule.h  types.h
include/cpputils/logging/consumer/: consumer_stream.h
include/cpputils/misc/: cancellation_token.h  convert.h  enum.h  exception.h  flags.h  indent.h  linq.h  string.h  time.h  transform_iterator.h  type_helper.h
include/cpputils/mp/core/: checker.h  const.h  modifier.h  types.h  when.h
include/nlohmann/: json.hpp
src/: CMakeLists.txt  LoggerImpl.cpp
src/cpputils/: EnumConversion.h  Exception.h  Flags.h  HandleManager.h  Linq.h  Logger.h  LoggerImpl.h  MetaProgramming.h  Misc.h  Nullable.h  SmartPtr.h  StreamHelper.h  StringHelper.h  Time.h  TransformIterator.h  container.h  misc.h  mp.h  old_linq.h
src/cpputils/container/: nullable.h  smart_ptr.h
src/cpputils/logging/: global.h  log_message.h  logger.h  logger_impl.h  message.h
src/cpputils/logging/consumer/: consumer.h
src/cpputils/logging/matcher/: matcher.h  matcher_all.h  matcher_default.h  matcher_regex.h
src/cpputils/misc/: exception.h  indent.h  linq.h  misc.h  stream.h  string.h  type_helper.h
src/cpputils/mp/: LICENSE.md  README.md  container.h  convert.h  core.h  intern.h  misc.h  operations.h  util.h
src/cpputils/mp/container/: basic_tuple.h  map.h  pair.h  type.h
src/cpputils/mp/core/: array.h  checker.h  conditionals.h  const.h  types.h
src/cpputils/mp/intern/: comparable_equal.h  comparable_less.h  ebo.h  fold_left.h  fold_right.h  has_value.h  hash_table.h  operators_comparable.h  operators_orderable.h
src/cpputils/mp/misc/: default.h  is_a.h  make.h  tag_of.h  to.h  when.h
src/cpputils/mp/operations/: at.h  compare.h  eval.h  eval_if.h  first.h  hash.fwd.h  hash.h  if.fwd.h  if.h  length.h  logical.h  second.h  transform.h  unpack.fwd.h  unpack.h  value.h
src/cpputils/mp/operations/compare/: equal.h  greater.h  greater_equal.h  less.h  less_equal.h  not_equal.h
src/cpputils/mp/operations/logical/: and.h  not.h  or.h
src/cpputils/mp/util/: default.h  is_a.h  make.h  tag_of.h  to.h  when.h
src/impl/logging/: LoggerImpl.cpp.old  logger_impl.cpp
src/impl/logging/consumer/: consumer.cpp  consumer_stream.cpp
src/logging/: global.cpp  logger.cpp  matcher.cpp
test/: CMakeLists.txt  EnumConversionTests.cpp  FlagsTests.cpp  HandleManagerTests.cpp  LinqTests.cpp  LoggingTests.cpp  MetaProgrammingTests.cpp  MiscTests.cpp  NullableTests.cpp  StreamHelperTests.cpp  StringHelperTests.cpp  TimeTests.cpp  TransformIteratorTests.cpp
test/container/: handle_manager.cpp  nullable.cpp
test/logging/: logging_tests.cpp
test/misc/: enum.cpp  flags.cpp  linq.cpp  misc.cpp  stream.cpp  string.cpp  time.cpp  transform_iterator.cpp
test/mp/: MetaProgrammingTests.cpp.old  convert.cpp  core.cpp  mp.cpp  util.cpp
test/mp/container/: basic_tuple.cpp  pair.cpp
test/mp/intern/: comparable_equal.cpp  ebo.cpp  has_value.cpp
test/mp/misc/: default.cpp  is_a.cpp  make.cpp  tag_of.cpp  to.cpp
test/mp/operations/: value.cpp
test/mp/operations/compare/: equal.cpp  less.cpp
test/mp/operations/logical/: and.cpp  or.cpp
test/mp/util/: default.cpp  is_a.cpp  make.cpp  tag_of.cpp  to.cpp
